Set max width on location search input to resolve issues on mobile

--- a/src/css/search.css
+++ b/src/css/search.css
@@ -66,6 +66,10 @@ body {
     margin-bottom: 0.8em;
 }
 
+.location-input {
+    max-width: 75%;
+}
+
 .header-search {
     width: 90%;
     margin: auto;
